Bug 358719 - fcitx creates blank unusable xembed icon in systray
Summary: fcitx creates blank unusable xembed icon in systray
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: XembedSNIProxy (other bugs)
Version First Reported In: 5.5.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 359711 359893 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-29 07:19 UTC by Mark
Modified: 2016-05-14 13:52 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark 2016-01-29 07:19:21 UTC
prior to plasma 5.5.4 fcitx (ime) prevented xembed icons loading in system tray.
This was fixed in plasma 5.5.4 and now fcitx and xembed icons can happily coexist.
However, fcitx now creates a blank xembed icon in systray along with its usual ime/keyboard icon.
The blank icon can be hidden in systray settings but on reboot the "hide" setting resets to "auto" and the blank icon is visible again.

Reproducible: Always



Expected Results:  
a blank xembed icon should not be created in systray by fcitx as it serves no practical purpose.
Comment 1 David Edmundson 2016-02-01 19:24:54 UTC
Please also file a bug with fcitx for not using the standard StatusNotifierItem specification
http://www.freedesktop.org/wiki/Specifications/StatusNotifierItem/ as ideally no-one should be using our legacy fallback code.
Comment 2 Mark 2016-02-02 02:40:47 UTC
would love to but unfortunately fcitx as of late 2015 has no bug reporting / tracking system due to google-code shutting down their issue tracker.
Comment 3 Arfrever Frehtes Taifersar Arahesis 2016-02-04 22:57:00 UTC
Fcitx now uses GitHub:
https://github.com/fcitx/fcitx
https://github.com/fcitx/fcitx-qt5
And you can file bugs therein.
Comment 4 Aleix Pol 2016-02-05 01:21:28 UTC
@david maybe you can confirm the bug?
Comment 5 CUI Hao 2016-02-05 02:39:50 UTC
Hi all,

This issue also affects me. I thought fcitx was to blame so I filed an issue to fcitx here:
https://github.com/fcitx/fcitx/issues/241

I know nothing about systray programming. If possible, you may provide some technical information for this issue.

I notice that if you merely kill fcitx, the blank icon won't disappear from Plasma systray. I though this may be a bug of xembedsniproxy. A dump of xembedsniproxy's terminal output is provided in above issue report.
Comment 6 Weng Xuetian 2016-02-09 03:31:13 UTC
Git commit 829158f830555c031755c6d4348e684779264342 by Weng Xuetian.
Committed on 09/02/2016 at 03:29.
Pushed by xuetianweng into branch 'master'.

Check whether there is any BadWindow error before monitor the event

The tray window itself may be destroyed before we start monitor the
event of it. Check the returned error and skip this window if BadWindow
happens.

FIXED-IN: 5.6.0
REVIEW: 127014

M  +23   -5    xembed-sni-proxy/fdoselectionmanager.cpp
M  +1    -1    xembed-sni-proxy/fdoselectionmanager.h

http://commits.kde.org/plasma-workspace/829158f830555c031755c6d4348e684779264342
Comment 7 David Edmundson 2016-02-29 11:18:38 UTC
*** Bug 359893 has been marked as a duplicate of this bug. ***
Comment 8 Wolfgang Bauer 2016-03-02 14:25:33 UTC
*** Bug 359711 has been marked as a duplicate of this bug. ***
Comment 9 Mark 2016-03-06 11:57:03 UTC
this actually appears to be fixed for me in plasma 5.5 on openSUSE leap 42.1
Thanks for the work.
Comment 10 Sergio 2016-05-13 10:50:12 UTC
Similar issue on Kubuntu 16.04, that ships with plasma 5.5.5. Hence plasma 5.5 does not solve the issue. Please reopen.

At times the icons do not appear, at times they appear but still they are not functional (i.e. clicking on them does nothing).

The issue seems to be fully repeatable with jitsi (the java based voip client), see  https://jitsi.org/. Jitsi should make the problem easy to reproduce since it has packages ready for most distros and logs a lot of information.

Among the information provided by the jitsi log you always find complaints about the systray that did not init properly.
Comment 11 Arfrever Frehtes Taifersar Arahesis 2016-05-14 01:07:48 UTC
(In reply to Sergio from comment #10)
> Similar issue on Kubuntu 16.04, that ships with plasma 5.5.5. Hence plasma
> 5.5 does not solve the issue.

Fix is in plasma-workspace >=5.6.0 and was never backported to "Plasma/5.5" branch in plasma-workspace repository.

Upgrade to KDE Plasma 5.6.*. If KDE Plasma 5.6.* is not yet available in Kubuntu, then ask KDE maintainers in Kubuntu to add KDE Plasma 5.6.* or to backport this fix to 5.5.*:
https://quickgit.kde.org/?p=plasma-workspace.git&a=commit&h=829158f830555c031755c6d4348e684779264342
Comment 12 Sergio 2016-05-14 13:52:05 UTC
OK! Thanks. Got the impression the fix was already in 5.5.5. I'll wait for 5.6 that should be in the kubuntu ppa soon then.