xembed-sni-proxy/fdoselectionmanager.h
@@ -48,7 +48,7 @@ private Q_SLOTS:
 
 private:
     void init();
-    void addDamageWatch(xcb_window_t client);
+    bool addDamageWatch(xcb_window_t client);
     void dock(xcb_window_t embed_win);
     void undock(xcb_window_t client);
     void compositingChanged();
